# postgresql2cosmosdb

./: .env.example  .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
src/postgresql2cosmosdb/: __init__.py  config.py  migrate.py  validate.py
